Archive2/9b/01046ebfdd9592/output
main.cpp:13:44: error: empty character constant
         if('a' > h3.nev[i] && h3.nev[i] != '')
                                            ^
main.cpp: In function 'std::string monogram(Hallgato)':
main.cpp:12:23: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < h3.nev.size(); i++) {
                       ^
main.cpp:14:20: error: 'mon' was not declared in this scope
             mono = mon + h3.nev[i];
                    ^
main.cpp: In function 'int main()':
main.cpp:23:30: error: expected ';' before 'std'
     std::cout << monogram(h) std::endl;
                              ^
